@@ -17,11 +17,6 @@
   -->
 
 <html>
-  <head>
-    <wicket:head>
-      <link wicket:id="feedlink" rel="alternate" type="application/rss+xml" title="History Feed" href="feed.xml" />
-    </wicket:head>
-  </head>
   <body>
     <wicket:extend>
       <div wicket:id="filter">
