@@ -1,3 +1,21 @@
+/*
+ * HeadsUp Agile
+ * Copyright 2009-2013 Heads Up Development Ltd.
+ *
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU Affero General Public License as
+ * published by the Free Software Foundation, either version 3 of the
+ * License, or (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Affero General Public License for more details.
+ *
+ * You should have received a copy of the GNU Affero General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ */
+
 .history-date {
     height: 30px;
     padding: 2px;
@@ -91,4 +109,33 @@ td.filterapp {
     border-right: 1px solid black;
     font-weight: bold;
     width: 100px;
+}
+
+.activity-group {
+    display: block;
+    float: left;
+    width: 500px;
+
+    margin-right: 20px;
+    margin-bottom: 20px;
+
+    border: 1px solid #ebecee;
+}
+
+.activity-group .activity-name {
+    background-color: #ebecee;
+    display: block;
+    padding: 5pt;
+
+    text-transform: capitalize;
+}
+
+.activity-group .activity-list {
+    padding: 5pt;
+    height: 500px;
+    overflow: scroll;
+}
+
+.activity-group .history-summary {
+    display: none;
 }
