@@ -1,5 +1,6 @@
 2.0-beta4
 
+* Add a grouped history page for better visibility of which apps are active
 * Better security by hiding email and telephone details from anonymous views
 
 * Fixed marked up text to render URLs as links
